--- a/demo.html
+++ b/demo.html
@@ -8,144 +8,40 @@
     <link rel="icon" type="image/png" href="./imgs/ico.png">
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/demo.css">
-    <link rel="stylesheet" href="./layui/css/layui.css">
     <script src="./js/jquery.js"></script>
-    <script src="./js/index.js"></script>
+    <script src="./js/demo.js"></script>
 </head>
 <body>
-<script>
-    $(function(){
 
-    })
-</script>
-<style>
-   #nav{
-       width: 600px;
-       height: 50px;
-       margin: 0 auto;
-       margin-top: 10px;
-   }
-    #nav li{
-        width:100px;
-        height: 100%;
-        float: left;
-        text-align: center;
-        line-height: 50px;
-    }
-    #nav li div{
-        height: 80%;
-        width: 80%;
-        margin: 0 auto;
-        margin-top: 5%;
-        text-align: center;
-        font-size: 15px;
-        color: #fff;
-        border: 2px solid #fff;
-        border-radius: 10px;
-        line-height: 40px;
-        transition: background 1s;
-    }
-   #nav li div:hover{
-       cursor: pointer;
-       background: #1C9890;
-   }
-    #con{
-        width: 90%;
-        height:320px;
-        margin: 0 auto;
-        margin-top: 20px;
-        text-align: center;
-    }
-   #con li{
-       bottom: 0;
-       width: 100%;
-       height: 100%;
-       margin: 0 auto;
-       display: none;
-       line-height: 300px;
-   }
-   #con li a{
-       display: block;
-       width:22%;
-       height: 100%;
-       float: left;
-       margin-left: 4%;
-       color: #4E5465;
-       background-position: center;
-       background-size: 70%;
-       background-repeat: no-repeat;
-       opacity: 0.8;
-       position: relative;
-
-   }
-   #con li a span{
-       display: block;
-       width: 100%;
-       height: 70px;
-       position: absolute;
-       bottom: 0;
-       left: 0;
-       right: 0;
-       margin: 0 auto;
-       background:#fff;
-
-       line-height: 60px;
-       text-align: center;
-       font-size: 16px;
-       color: #333;
-       opacity: 1;
-   }
-   #con05 a:nth-child(1){
-       margin-left: 0;
-   }
-</style>
 <div>
     <ul id="nav">
-       <li id="nav01">
-           <div>网站</div>
-       </li>
-       <li id="nav02">
+       <li id="nav01" class="navList">
            <div>HTML5</div>
        </li>
-       <li id="nav03">
-           <div>CSS3</div>
-       <li id=nav04">
-        <div>小游戏</div>
+       <li id="nav02" class="navList">
+           <div>App</div>
        </li>
-       <li id="nav05">
-           <div>APP</div>
-       </li>
-       <li id="nav06">
-           <div>Node.js</div>
+       <li id="nav03"  class="navList">
+           <div>工具</div>
        </li>
     </ul>
     <ul id="con">
-        <li id="con01">
-            <a href="#">小米官网临摹</a>
-            <a href="#">银泰官网临摹</a>
-            <a href="#">天猫官网临摹</a>
-            <a href="#">京东官网临摹</a>
+        <li id="con01" class="conList">
+            <a href=" https://asiazdx.github.io/webPS/" target="_blank" style="background-image:url('./imgs/webPS.png');">
+                <span>网页版PS</span>
+            </a>
+            <a href="https://asiazdx.github.io/runGame/" target="_blank" style="background-image:url('./imgs/runGame.png');">
+                <span>跑酷游戏</span>
+            </a>
+            <a href="https://asiazdx.github.io/3Droom/" target="_blank" style="background-image:url('./imgs/3Droom.png');">
+                <span>3Droom</span>
+            </a>
+            <a href="https://asiazdx.github.io/fullPageTest/" target="_blank" style="background-image:url('./imgs/fullPage.png');">
+                <span>fullPage临摹</span>
+            </a>
         </li>
-        <li id="con02">
-            <a href="#">网页版PS</a>
-            <a href="#">音乐播放器</a>
-            <a href="#">苹果官网临摹</a>
-            <a href="#">粒子动画</a>
-        </li>
-        <li id="con03">
-            <a href="#">3D房子</a>
-            <a href="#">网易邮箱</a>
-            <a href="#">百度舆情</a>
-            <a href="#">多啦A梦</a>
-        </li>
-        <li id="con04">
-            <a href="#">五子棋</a>
-            <a href="#">扑克牌</a>
-            <a href="#">俄罗斯方块</a>
-            <a href="#">跑酷游戏</a>
-        </li>
-        <li id="con05" style="display: block">
-            <a href="#" target="_blank" style="background-image:url('./imgs/music.png');">
+        <li id="con02"  class="conList">
+            <a href="javascript:;" target="_blank" style="background-image:url('./imgs/music.png');">
                 <span>音乐App</span>
             </a>
             <a href="https://asiazdx.github.io/shoopApp/" target="_blank" style="background-image:url('./imgs/shopApp.jpg');">
@@ -158,11 +54,19 @@
                 <span>工作App</span>
             </a>
         </li>
-        <li id="con06">
-            <a href="#">gulp工具</a>
-            <a href="#">express框架</a>
-            <a href="#">微信小程序</a>
-            <a href="#">爬虫技术</a>
+        <li id="con03" class="conList">
+            <a href="javascript:;" target="_blank" style="background-image:url('./imgs/gulp.jpg');">
+                <span>gulp</span>
+            </a>
+            <a href="https://asiazdx.github.io/shoopApp/" target="_blank" style="background-image:url('./imgs/express.jpg');">
+                <span>express</span>
+            </a>
+            <a href="http://lewisnewsapp.duapp.com" target="_blank" style="background-image:url('./imgs/react1.jpg');">
+                <span>react</span>
+            </a>
+            <a href="http://lewisworkapp.duapp.com/" target="_blank" style="background-image:url('./imgs/pachong.jpg');">
+                <span>爬虫技术</span>
+            </a>
         </li>
     </ul>
 </div>
