--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <li class="menue-list">
             <a href="./demo.html" target="iframe">
                 <img alt="404" src="./imgs/nav_5.png" width="40px" height="40px">
-                <span>demo</span>
+                <span>实验室</span>
             </a>
         </li>
         <li class="menue-list">
