--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/home.css">
     <script src="./js/jquery.js"></script>
-    <title>蕉下客个人博客网站</title>
+    <title>Asiazdx博客网站</title>
     <style>
         @font-face {
             font-family: 'iconfont';  /* project id 222967 */
@@ -35,7 +35,7 @@
 </head>
 <body>
 <div id="mainBody">
-<ul>
+<!-- <ul>
     <li>
         <a href="#">
             <div> <i id="icon1" class="iconfont">&#xe67e;</i></div>
@@ -60,7 +60,7 @@
             <p>ACTION</p>
         </a>
     </li>
-</ul>
+</ul> -->
 </div>
 </body>
 </html>
