--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>北方雪个人主页</title>
+    <title>Asiazdx个人主页</title>
     <meta name="viewport"
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="icon" type="image/png" href="./imgs/ico.png">
@@ -22,7 +22,7 @@
     <div class="wrap">
         <div class="log">
             <img src="./imgs/logo.png" width="80px" height="80px">
-            <p id="font" style="width: 400px">修德立信，博学求真，我是北方雪</p>
+            <p id="font" style="width: 400px">修德立信，博学求真，我是Asiazdx</p>
         </div>
         <ul class="menue">
         <li class="menue-list">
@@ -71,25 +71,6 @@
     </div>
 </div>
 <!--大屛导航 end-->
-<!--小屏导航-->
-<div class="small">
-    <div class="left"></div>
-    <div class="left-son">
-        <a href="#">
-            home
-        </a>
-        <a href="#">博客</a>
-        <a href="./project.html" target="iframe">项目</a>
-        <a href="./skip.html" target="iframe">技能</a>
-        <a href="#">作品</a>
-        <a href="#">简介</a>
-    </div>
-    <div class="center">
-        <img src="./imgs/ico.png" width="40px" height="40px">
-    </div>
-    <div class="right">MENUE</div>
-</div>
-<!--小屏导航end-->
 <iframe id="mainBody" src="./home.html" name="iframe" frameborder=no scrolling="no" width="100%">
 </iframe>
 <!--footer-->
@@ -97,7 +78,7 @@
 <p>工作地址:山西太原</p>
 <p>邮箱:18734910421@163.com</p>
 <div class="more">
-    <a href="https://github.com/zhangdongxue123">
+    <a href="https://github.com/Asiazdx">
         更多详情请点击
     </a>
 </div>
