--- a/index.html
+++ b/index.html
@@ -241,21 +241,21 @@
                     </figcaption>
                 </figure>    
                 <figure class="effect-julia">
-                    <img src="images/che.png" alt="img21">
+                    <img src="images/yinx.png" alt="img21">
                     <figcaption>
-                        <h2>北京车网互联</h2>
-                        <h3>2015/10--2015/12</h3>
+                        <h2>印象高校微信公众号</h2>
+                        <h3>2014/12--2015/2</h3>
                         <div>
                             <p>
                                 <b>责任描述：</b>
-                                在项目中主要负责对页面的前台布局，与 UI 设计师和后台数据对接，相互沟通，讨论问题的解决方案，最终定稿，然后在投入到开发工作中，最后进行项目上线之前的测试。
+                                在项目中主要负责对微信公众号下的“财大市场”和“失物招领”的前台布局，与 UI 设计师和后台数据对接，相互沟通，讨论问题的解决方案，最终定稿，然后在投入到开发工作中，最后进行项目上线之前的测试。
                             </p>
                             <p>
                                 <b>项目介绍：</b>
-                                该项目为北京车网互联科技有限公司的官方网站，页面展示了公司的产品，解决方案，新闻中心，人才聘以及企业信息等。
+                                该项目为印象高校微信公众号，是一个面向高校的传媒平台，用来发布校园信息，弘扬正能量，引导学生正确的价值观。同时其中增添有“财大市场”和“失物招领”模块。公众号：sxcdwgw
                             </p>
                         </div>
-                        <a href="http://carsmart.cn/main.html" target="_blank">View more</a>
+                        <a href="javascript:alert('关注公众号sxcdwgw')" target="_blank">View more</a>
                     </figcaption>
                 </figure>
             </div>
