--- a/index.html
+++ b/index.html
@@ -553,13 +553,13 @@
 
                     <div class="row node" style="overflow: hidden">
                         <div class="col-md-3 col-xs-6 thumb">
-                            <a href="https://github.com/lewiscutey/node-Small-program" target="_blank">
+                            <a href="https://github.com/Asiazdx/p2pProject" target="_blank">
                                 <div class="thumb-wrap">
                                     <div class="over-hid rel">
                                         <div class="mask">
                                             <i class="fa fa-link fa-3x"></i>
                                         </div>
-                                        <img class="img-responsive" src="images/xiaoyingyong.png">
+                                        <img class="img-responsive" src="images/wx.png">
                                     </div>
                                     <div class="describe text-center">小程序客户端子系统</div>
                                 </div>
@@ -567,13 +567,13 @@
                         </div>
                        
                         <div class="col-md-3 col-xs-6 thumb">
-                            <a href="https://github.com/lewiscutey/Crawler-newsApp" target="_blank">
+                            <a href="https://github.com/Asiazdx/p2pProject" target="_blank">
                                 <div class="thumb-wrap">
                                     <div class="over-hid rel">
                                         <div class="mask">
                                             <i class="fa fa-link fa-3x"></i>
                                         </div>
-                                        <img class="img-responsive" src="images/pachong.png">
+                                        <img class="img-responsive" src="images/wxm.png">
                                     </div>
                                     <div class="describe text-center">小程序管理端子系统</div>
                                 </div>
